# TMM

./: DBR_example.py  README.md  VCSEL_example.py  active_region_embedding.py  how_to_install.txt  lifetime_tuning.py  publication.py  pyproject.toml  requirements.txt  style.mplstyle
TMM/: analysis.py  field_solver.py  optics_utils.py  optimizations.py  outputs.py  structure_builder.py
